# zwssock

./: CHANGELOG.md  CMakeLists.txt  Makefile  README.md  conanfile.py
src/zwssock/: zwsdecoder.c  zwsdecoder.h  zwshandshake.c  zwshandshake.h  zwssock.c  zwssock.h
test/: c_test.c  example.html
